# smile-harness

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  COLDSTART_PROMPT.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml
.github/workflows/: ci.yml
demo/: __init__.py  demo_mechanisms.py
demo/broken_module/: test_buggy.py
deploy/: README.md  docker-compose.yml  nginx.conf
smile_harness/cli/: __init__.py  app.py
smile_harness/config/: __init__.py  loader.py  schema.py
smile_harness/creds/: __init__.py  env_store.py  keyring_store.py  manager.py
smile_harness/feedback/: __init__.py  exitcode.py  loop.py  pytest_val.py  taxonomy.py  validator.py
smile_harness/guardrails/: __init__.py  guardrail.py  hitl.py
smile_harness/llm/: __init__.py  base.py  mock.py  openai_compatible.py
smile_harness/loop/: __init__.py  decision.py  main_loop.py
smile_harness/memory/: retrieve.py  store.py
smile_harness/tools/: __init__.py  base.py  dispatcher.py  fs.py  shell.py
smile_harness/web/: __init__.py  server.py
tests/: test_cli.py  test_config.py  test_creds.py  test_decision.py  test_demo.py  test_deploy.py  test_guardrail.py  test_hitl.py  test_loop.py  test_main_loop.py  test_memory.py  test_mock_llm.py  test_packaging.py  test_real_llm.py  test_smoke.py  test_taxonomy.py  test_tools.py  test_validator.py  test_web.py
