[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smile-harness"
version = "0.1.0"
description = "A minimal, spec-driven Python coding-agent harness."
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "pyyaml",
    "keyring",
    "httpx",
    "fastapi",
    "uvicorn",
]

[project.scripts]
minicc = "smile_harness.cli.app:main"

[tool.setuptools.packages.find]
include = ["smile_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
