[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smile-harness"
version = "0.1.0"
description = "A minimal, spec-driven Python coding-agent harness with ReAct loop, guardrails, and feedback validation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "smile-harness contributors" },
]
keywords = [
    "coding-agent",
    "agent-harness",
    "ReAct",
    "LLM",
    "guardrails",
    "feedback-loop",
    "AI4SE",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pytest",
    "pyyaml",
    "keyring",
    "httpx",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/example/smile-harness"
Repository = "https://github.com/example/smile-harness"
Issues = "https://github.com/example/smile-harness/issues"

[project.scripts]
minicc = "smile_harness.cli.app:main"

[tool.setuptools.packages.find]
include = ["smile_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
